 - GBA Serialize: Fix loading savegames from savestates
 - All: Fix several file handle leaks
 - Util: Use closesocket on Windows
Misc:
 - GBA: Slightly optimize GBAProcessEvents
 - Qt: Add preset for DualShock 4
 - SDL: Remove default gamepad mappings
 - Qt: Update 360 input profile on OS X to reflect newer drivers
 - Qt: Remove use of NaN

0.4.0: (2016-02-02)
Features:
 - Officially supported ports for the Nintendo 3DS, Wii, and PlayStation Vita
 - I/O viewer
 - Booting of multiboot images
 - Customization of GIF recording
 - Libretro: Cheat code support
 - Support for GLSL shaders
 - ROM information view
 - Support for VBA-style cheat codes
 - Savestates now store creation timestamps
 - Key autofire
 - Libretro: Allow blocking opposing directional input
 - OpenEmu core for OS X
 - Libretro: Settings for using BIOS and skipping intro
 - Libretro: Customizable idle loop removal
 - Implemented cycle counting for sprite rendering
 - Cleaner, unified settings window
 - Added a setting for pausing when the emulator is not in focus
 - Customizable paths for save games, save states, screenshots and patches
 - Controller hotplugging
 - Ability to store save games and active cheats within savestates
Bugfixes:
 - ARM7: Fix sign of unaligned LDRSH
 - ARM7: Fix decoding of some ARM ALU instructions with shifters
 - Debugger: Fix watchpoints in gdb
 - GBA: Fix warnings when creating and loading savestates
 - GBA: Fix Iridion II savetype
 - GBA BIOS: Fix misaligned CpuSet
 - GBA Cheats: Fix cheats setting the Action Replay version
 - GBA Hardware: Fix GPIO on big endian
 - GBA Memory: Fix DMA register writing behavior
 - GBA Memory: Fix DMAs triggering two cycles early
 - Libretro: Fix aspect ratio
 - Qt: Fix some potential crashes with the gamepad mapping
 - Qt: Fix keys being mapped incorrectly when loading configuration file
 - Util: Fix PowerPC PNG read/write pixel order
 - Util: Fix excessive memory allocation when decoding a PNG