@@ -21,6 +21,7 @@ Misc:
  - SDL: Remove default gamepad mappings
  - Qt: Update 360 input profile on OS X to reflect newer drivers
  - Qt: Remove use of NaN
+ - FFmpeg: Update dependencies on Ubuntu
 
 0.4.0: (2016-02-02)
 Features:
